--- a/css/less.style2.css
+++ b/css/less.style2.css
@@ -22,7 +22,7 @@ a {
   align-items: center;
   justify-content: space-between;
   height: 70px;
-  background-color: #f4a8a6;
+  background-color: #891412;
   padding: 0 30px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -30,7 +30,7 @@ a {
   outline: none;
   border: none;
   padding: 8px 20px;
-  background: #daecc5;
+  background: #5c852c;
   border-radius: 7px;
   cursor: pointer;
 }
@@ -50,7 +50,7 @@ a {
   padding: 0 15px;
 }
 .mynav__item:hover {
-  background-color: #f9d4d3;
+  background-color: #b61b17;
 }
 .mynav__link {
   font-size: 17px;
@@ -75,19 +75,19 @@ a {
 }
 .main__tile--danger .main__header,
 .main__tile--danger .main__plus {
-  color: #ff97ab;
+  color: #96001d;
 }
 .main__tile--success .main__header,
 .main__tile--success .main__plus {
-  color: #66ffb5;
+  color: #006735;
 }
 .main__tile--warning .main__header,
 .main__tile--warning .main__plus {
-  color: #ffb070;
+  color: #703200;
 }
 .main__tile--primary .main__header,
 .main__tile--primary .main__plus {
-  color: #27eaff;
+  color: #002428;
 }
 .main__header {
   margin-bottom: 30px;
@@ -120,30 +120,30 @@ a {
   background: transparent;
 }
 .main__button--danger {
-  border-color: #ff97ab;
+  border-color: #96001d;
 }
 .main__button--danger:hover {
-  background: #ff97ab;
+  background: #96001d;
   color: #fff;
 }
 .main__button--success {
-  border-color: #66ffb5;
+  border-color: #006735;
 }
 .main__button--success:hover {
-  background: #66ffb5;
+  background: #006735;
   color: #fff;
 }
 .main__button--primary {
-  border-color: #27eaff;
+  border-color: #002428;
 }
 .main__button--primary:hover {
-  background: #27eaff;
+  background: #002428;
   color: #fff;
 }
 .main__button--warning {
-  border-color: #ffb070;
+  border-color: #703200;
 }
 .main__button--warning:hover {
-  background: #ffb070;
+  background: #703200;
   color: #fff;
 }
